# thank_you_rocket_rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  docker-compose.yml  fast-redeploy.sh  fastbuild.Dockerfile  redeploy.sh  rust-toolchain.toml  setup_sub_projects.sh
src/: common.rs  main.rs  message.rs  metrics.rs  paste.rs  state_management.rs  user.rs  verified_guard.rs
src/pages/: admin.rs  error_catch_pages.rs  index.rs  login.rs  mod.rs  new.rs  outcome_pages.rs  post_paste.rs  submit_message.rs  view.rs
