[package]
name = "thank_you_rocket_rs"
version = "0.8.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0.149", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = { version = "0.8.1", features = ["serde"] }
serde_json = "1.0.88"
html-escape = "0.2.13"
uuid = { version = "1.3.0", features = ["v4"] }
maud = { version = "0.24.0" }
lazy_static = "1.4.0"
argon2 = "0.4.1"
